Add more portfolios

--- a/APExhibition/AinsleyMillard.html
+++ b/APExhibition/AinsleyMillard.html
@@ -36,7 +36,14 @@
                             Ainsley Millard
                         </div>
                     </div>
-                    For this investigation, I use my graphic drawing style to illustrate themes of childhood and adolescence to depict a "sweet but psycho" narrative. By utilizing a style similar to Japanese horror manga, but incorporating contemporary style and themes regarding women, I’m able to ask myself this: “why are women forced to cloak their true selves in a facade of beauty and grace?”. I wanted to depict a series of people, primarily women, who are doing the exact opposite. The medium of micron and acrylic paint allows me to create minimalistic works, so that I can focus on the detail of the subject alone. These characters, through exposure, have become their own entities. I don’t want them to be dissolved into a background. 
+                    For this investigation, I use my graphic drawing style to illustrate themes of childhood and
+                    adolescence to depict a "sweet but psycho" narrative. By utilizing a style similar to Japanese
+                    horror manga, but incorporating contemporary style and themes regarding women, I’m able to ask
+                    myself this: “why are women forced to cloak their true selves in a facade of beauty and grace?”. I
+                    wanted to depict a series of people, primarily women, who are doing the exact opposite. The medium
+                    of micron and acrylic paint allows me to create minimalistic works, so that I can focus on the
+                    detail of the subject alone. These characters, through exposure, have become their own entities. I
+                    don’t want them to be dissolved into a background.
                 </div>
                 <div class="chonk">
                     <img class="portfolio-image" src="media/AinsleyMillard_2D/1.jpg" />
