--- a/APExhibition/BrooklynCicero.html
+++ b/APExhibition/BrooklynCicero.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>ARIANNA WEAVER</title>
+    <title>BROOKLYN CICERO</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
@@ -30,37 +30,38 @@
                 <div class="chonk small-text">
                     <div class="label">
                         <div class="label-title">
-                            Lonely World
+                            the female subconscious
                         </div>
                         <div class="label-desc">
-                            Arianna Weaver
+                            Brooklyn Cicero
                         </div>
                     </div>
 
-                    Loneliness is a confusing, and sometimes, ironic feeling. In my sustained investigation, I explored
-                    this complex emotion. How does it manifest itself? Can we feel it even among loved ones? How do we
-                    try to conceal this feeling? I was drawn to this subject because I wanted to delve into something I
-                    could personally relate to. My intention is for each of my pieces to capture an aspect of
-                    loneliness, from the more overt forms to the subtler emotions. In this process, I used many
-                    different mediums, which allows me to depict a variety of related subjects.
+                    I decided to study the female subconscious’s perspective of trauma because I feel that this is
+                    something every woman experiences, no matter the extent. To ensure that the subconscious aspect was
+                    present, I used psychedelic elements, like vibrant colors, misconstructed settings, and undulating
+                    patterns in my pieces. I am using mediums that I am familiar with like, acrylic, pencil, pen, and
+                    ink. However, I am wanting to try something new, so I will implement elements of collage work, to
+                    add some texture and contrast to my portfolio.
                 </div>
+
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/1.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/1.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Floating/Falling
+                            trapped
                         </div>
                         <div class="label-desc">
-                            16”x20”; Acrylic paint; Jan 2021
+                            Mirror, tape measure, sharpie, acrylic paint; 2020
                         </div>
                     </div>
                 </div>
 
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/2.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/2.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Floating/Falling [Detail]
+                            trapped [Detail]
                         </div>
                         <div class="label-desc">
                             -
@@ -69,46 +70,22 @@
                 </div>
 
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/3.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/3.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Expanse
+                            your puppet
                         </div>
                         <div class="label-desc">
-                            16"x20"; Acrylic paint; Dec 2020
+                            Wooden hand mannequin, wooden puppet, acrylic paint; 2021
                         </div>
                     </div>
                 </div>
 
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/4.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/4.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Fray
-                        </div>
-                        <div class="label-desc">
-                            16"x20"; Acrylic paint; Oct 2020
-                        </div>
-                    </div>
-                </div>
-
-                <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/5.jpg" />
-                    <div class="label">
-                        <div class="label-title">
-                            Blues
-                        </div>
-                        <div class="label-desc">
-                            16"x20"; Acrylic paint; Oct 2020
-                        </div>
-                    </div>
-                </div>
-
-                <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/6.jpg" />
-                    <div class="label">
-                        <div class="label-title">
-                            Blues [Detail]
+                            your puppet [Detail]
                         </div>
                         <div class="label-desc">
                             -
@@ -117,13 +94,49 @@
                 </div>
 
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/7.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/5.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Slipped Away
+                            your puppet [Detail]
                         </div>
                         <div class="label-desc">
-                            14"x11"; Colored pencil; Feb 2021
+                            -
+                        </div>
+                    </div>
+                </div>
+
+                <div class="chonk">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/6.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            touch
+                        </div>
+                        <div class="label-desc">
+                            5"x7"; Acrylic paint; 2020
+                        </div>
+                    </div>
+                </div>
+
+                <div class="chonk">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/7.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            jealousy
+                        </div>
+                        <div class="label-desc">
+                            Micron pen, sharpie; 2020
+                        </div>
+                    </div>
+                </div>
+
+                <div class="chonk">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/8.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            i envy her
+                        </div>
+                        <div class="label-desc">
+                            3.6"x5.2"; Pencil; 2021
                         </div>
                     </div>
                 </div>
@@ -133,40 +146,55 @@
                 <div class="vert-align">
 
                     <div class="portfolio-artist-statement-text fade-in">
-                        Loneliness is a confusing, and sometimes, ironic feeling. It can be present in one’s physical seclusion, just the same as among loved ones. It is also an incredibly destructive force, which isolates one from those who can help one overcome it. In my sustained investigation, I explored this complex emotion. How does it manifest itself? Does its presence depend on if we are friendless or actually alone? And, how do we try to conceal this feeling from others?  I was drawn to this subject because I wanted to delve into something I could personally relate to, and had experienced in my own life. My intention is for each of my pieces to capture an aspect of loneliness that I have felt or witnessed- from the more overt forms, such as physical solitude or ostracization, to the subtler, sometimes indescribable emotions, that may not have a specific source. To accomplish this, I used vivid colors to represent specific emotions and contrast between external appearances and internal struggles.
+                        In our society, many women will encounter a form of trauma, disorder or abuse in her life.
+                        People may be unaware of the things happening to the women around them, but their traumatic
+                        experiences haunt their minds daily. I want to portray the different types of experiences women
+                        face, but through the lens of her subconscious. In my pieces, I use vibrant, pastel colors and
+                        incorporate motifs of hands and eyes as symbols of the types of trauma that women experience. To
+                        illustrate the subconscious element of each piece, I incorporate psychedelic colors and symbols
+                        and connect them to specific physical, mental or emotional states. I categorize my works into
+                        three main themes: toxic relationships, abuse and disorders. From there I choose specific
+                        examples of each theme that I want to depict. For example, in the toxic relationship category, I
+                        created works that pictoralize the idea of manipulation and jealousy, hence my pieces titled
+                        “jealousy” and “i envy her”.
                         <br>
                         <br>
-                        In this process, I wanted to use a variety of different mediums, in order to broaden my horizons, as well as to properly capture the various dimensions of loneliness. I have also taken the opportunity to explore techniques, mediums, surfaces, and subjects that are unfamiliar or completely new to me. This has provided me with new inspiration, as well as an improving technical ability. The diversity is important, as each medium uniquely helps me depict a delicate or more forceful aspect of my subject.
+                        I mainly use acrylic in my pieces, but I did some of my works in ink, pencil, pen, and collage.
+                        I want to ensure I capture the ideas clearly, so I typically use mediums that I am more familiar
+                        with. I will, however, integrate collage elements, which is something I have just begun using
+                        around late 2020. I think collage would give a nice contrast to the brightness of acrylic or the
+                        monochrome vibe of pencil, pen and ink.
+
 
                     </div>
 
                     <div class="label">
                         <div class="label-title">
-                            Lonely World
+                            the female subconscious
                         </div>
                         <div class="label-desc">
-                            Arianna Weaver
+                            Brooklyn Cicero
                         </div>
                     </div>
                 </div>
 
                 <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/1.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/1.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Floating/Falling
+                            trapped
                         </div>
                         <div class="label-desc">
-                            16”x20”; Acrylic paint; Jan 2021
+                            Mirror, tape measure, sharpie, acrylic paint; 2020
                         </div>
                     </div>
                 </div>
 
                 <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/2.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/2.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Floating/Falling [Detail]
+                            trapped [Detail]
                         </div>
                         <div class="label-desc">
                             -
@@ -174,61 +202,73 @@
                     </div>
                 </div>
                 <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/3.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/3.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Expanse
+                            your puppet
                         </div>
                         <div class="label-desc">
-                            16"x20"; Acrylic paint; Dec 2020
+                            Wooden hand mannequin, wooden puppet, acrylic paint; 2021
                         </div>
                     </div>
                 </div>
 
                 <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/4.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/4.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Fray
-                        </div>
-                        <div class="label-desc">
-                            16"x20"; Acrylic paint; Oct 2020
-                        </div>
-                    </div>
-                </div>
-
-                <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/5.jpg" />
-                    <div class="label">
-                        <div class="label-title">
-                            Blues
-                        </div>
-                        <div class="label-desc">
-                            16"x20"; Acrylic paint; Oct 2020
-                        </div>
-                    </div>
-                </div>
-
-                <div class="vert-align">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/6.jpg" />
-                    <div class="label">
-                        <div class="label-title">
-                            Blues [Detail]
+                            your puppet [Detail]
                         </div>
                         <div class="label-desc">
                             -
+                        </div>
+                    </div>
+                </div>
+
+                <div class="vert-align">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/5.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            your puppet [Detail]
+                        </div>
+                        <div class="label-desc">
+                            -
+                        </div>
+                    </div>
+                </div>
+
+                <div class="vert-align">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/6.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            touch
+                        </div>
+                        <div class="label-desc">
+                            5"x7"; Acrylic paint; 2020
+                        </div>
+                    </div>
+                </div>
+
+                <div class="vert-align">
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/7.jpg" />
+                    <div class="label">
+                        <div class="label-title">
+                            jealousy
+                        </div>
+                        <div class="label-desc">
+                            Micron pen, sharpie; 2020
                         </div>
                     </div>
                 </div>
 
                 <div class="vert-align last-image">
-                    <img class="portfolio-image" src="media/AriannaWeaver_2D/7.jpg" />
+                    <img class="portfolio-image" src="media/BrooklynCicero_D/8.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            Slipped Away
+                            i envy her
                         </div>
                         <div class="label-desc">
-                            14"x11"; Colored pencil; Feb 2021
+                            3.6"x5.2"; Pencil; 2021
                         </div>
                     </div>
                 </div>
