--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -61,7 +61,7 @@
 
                 <div class="portfolio">
                     <a href="/APExhibition/ArkitaJain" target="_blank">
-                        <img class="thumbnail" src="media/ArkitaJain_D/thumbnail.jpg">
+                        <img class="thumbnail" src="media/ArkitaJain_D/thumbnail.png">
                         <div class="caption-container">
                             <div class="caption-1">Suppression of Women in Indian Culture </div>
                             <div class="caption-2">Arkita Jain</div>
