--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -175,9 +175,9 @@
                 </div>
                 <div class="portfolio">
                     <a href="/APExhibition/BrooklynCicero" target="_blank">
-                        <img class="thumbnail" src="media/SydneyTakemoto_2D/thumbnail.jpg">
+                        <img class="thumbnail" src="media/BrooklynCicero_D/thumbnail.jpg">
                         <div class="caption-container">
-                            <div class="caption-1">NAME</div>
+                            <div class="caption-1">the female subconscious</div>
                             <div class="caption-2">BrooklynCicero</div>
                         </div>
                     </a>
