--- a/APExhibition/GloriaZhu.html
+++ b/APExhibition/GloriaZhu.html
@@ -36,10 +36,11 @@
                             Gloria Zhu
                         </div>
                     </div>
-                    My work is centered around the consuming feelings of alienation and anxiety, especially in social or public situations. The motif of eyes is repeated throughout the series, emphasizing how these feelings come about as a result of personal perception and mental state rather than outside influences. I indeed to depict both the capability to feel extremely embroiled in a space, as if everyone is staring at me, as well as the almost opposite feeling that one is alienated and a million miles away from everyone else; part of my goal is to point out the irony of how we see ourselves from our perspective as the center of the universe, when in reality we all look the same -- and anonymous -- in a crowd.
-                    <br><br>
-                    Warm and cool tones, usually red vs. blue hues, are used as indicators of the “nervous” vs. the “calm” regions of a piece. They interact in various ways in the pieces, sometimes competing for the viewer’s attention and in other cases, working together to convey an idea. Each image is also created using a different medium and/or visual style in an effort to present and interact with the same ideas from different angles; some work is created as a response or partner to a previous piece.
-                    
+                    My work is centered around the consuming feelings of alienation and anxiety; I intend to depict both
+                    the capability to feel extremely embroiled in a space, as if everyone is staring at me, as well as
+                    the almost opposite feeling that one is alienated and a million miles away from everyone else. Part
+                    of my goal is to point out the irony of how we see ourselves from our perspective as the center of
+                    the universe, when in reality we all look the same -- and anonymous -- in a crowd.
                 </div>
                 <div class="chonk">
                     <img class="portfolio-image" src="media/GloriaZhu_2D/1.JPG" />
@@ -106,10 +107,22 @@
                 <div class="vert-align">
 
                     <div class="portfolio-artist-statement-text fade-in">
-                        My work is centered around the consuming feelings of alienation and anxiety, especially in social or public situations. The motif of eyes is repeated throughout the series, emphasizing how these feelings come about as a result of personal perception and mental state rather than outside influences. I indeed to depict both the capability to feel extremely embroiled in a space, as if everyone is staring at me, as well as the almost opposite feeling that one is alienated and a million miles away from everyone else; part of my goal is to point out the irony of how we see ourselves from our perspective as the center of the universe, when in reality we all look the same -- and anonymous -- in a crowd.
-                    <br><br>
-                    Warm and cool tones, usually red vs. blue hues, are used as indicators of the “nervous” vs. the “calm” regions of a piece. They interact in various ways in the pieces, sometimes competing for the viewer’s attention and in other cases, working together to convey an idea. Each image is also created using a different medium and/or visual style in an effort to present and interact with the same ideas from different angles; some work is created as a response or partner to a previous piece.
-                    
+
+                        My work is centered around the consuming feelings of alienation and anxiety, especially in
+                        social or public situations. The motif of eyes is repeated throughout the series, emphasizing
+                        how these feelings come about as a result of personal perception and mental state rather than
+                        outside influences. I intend to depict both the capability to feel extremely embroiled in a
+                        space, as if everyone is staring at me, as well as the almost opposite feeling that one is
+                        alienated and a million miles away from everyone else; part of my goal is to point out the irony
+                        of how we see ourselves from our perspective as the center of the universe, when in reality we
+                        all look the same -- and anonymous -- in a crowd.
+                        <br><br>
+                        I picked materials according to what I thought would best suit the purpose of each piece; for
+                        example, I would use oil pastel for a piece that was meant to be very “chunky” and heavyset, or
+                        marker for one meant to be more clean and uniform. However, despite the different materials, I
+                        hope the body of work can still be kept cohesive through common ideas and the warm/cool color
+                        palette (usually red vs. blue hues, which indicate the “nervous” vs. “calm” regions of a piece).
+
                     </div>
 
                     <div class="label">
