--- a/APExhibition/GloriaZhu.html
+++ b/APExhibition/GloriaZhu.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="chonk">
-                    <img class="portfolio-image" src="media/GloriaZhu_2D/3.JPG" />
+                    <img class="portfolio-image" src="media/GloriaZhu_2D/3work.jpg" />
                     <div class="label">
                         <div class="label-title">
                             “Clamped On”
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="vert-align">
-                    <img class="portfolio-image" src="media/GloriaZhu_2D/3.JPG" />
+                    <img class="portfolio-image" src="media/GloriaZhu_2D/3work.jpg" />
                     <div class="label">
                         <div class="label-title">
                             “Clamped On”
