--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="overlay">
         <div class="overlay-title">
-            AP Studio Art Exhibition 2021
+            Harker's 2021 AP Studio Art Exhibition
         </div>
 
         <script>
