Add The Harker School

--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -26,7 +26,8 @@
     </div>
     <div class="overlay">
         <div class="overlay-title">
-            Harker's 2021 AP Studio Art Exhibition
+            <div class="overlay-big">2021 AP Studio Art Exhibition</div>
+            <div class="overlay-small">The Harker School</div>
         </div>
 
         <script>
