--- a/APExhibition/BrooklynCicero.html
+++ b/APExhibition/BrooklynCicero.html
@@ -49,7 +49,7 @@
                     <img class="portfolio-image" src="media/BrooklynCicero_D/1.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            trapped
+                            don’t look at me
                         </div>
                         <div class="label-desc">
                             Mirror, tape measure, sharpie, acrylic paint; 2020
@@ -61,7 +61,7 @@
                     <img class="portfolio-image" src="media/BrooklynCicero_D/2.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            trapped [Detail]
+                            don’t look at me [Detail]
                         </div>
                         <div class="label-desc">
                             -
@@ -182,7 +182,7 @@
                     <img class="portfolio-image" src="media/BrooklynCicero_D/1.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            trapped
+                            don’t look at me
                         </div>
                         <div class="label-desc">
                             Mirror, tape measure, sharpie, acrylic paint; 2020
@@ -194,7 +194,7 @@
                     <img class="portfolio-image" src="media/BrooklynCicero_D/2.jpg" />
                     <div class="label">
                         <div class="label-title">
-                            trapped [Detail]
+                            don’t look at me [Detail]
                         </div>
                         <div class="label-desc">
                             -
