--- a/APExhibition/JackieHu.html
+++ b/APExhibition/JackieHu.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div class="fixedback"><a href="/APExhibition">Back</a></div>
     <div class="tooltip large">hold SHIFT while scrolling</div>
     <div class="portfolio-container">
         <!-- <div class="portfolio-header">
