--- a/APExhibition/JackieHu.html
+++ b/APExhibition/JackieHu.html
@@ -45,28 +45,6 @@
                     hesitation, without proof. Such faith can allow religious leaders to manipulate its followers for
                     their own personal gain. In my sustained investigation, I explore how religious symbols have been
                     corrupted throughout history as a means of influencing its followers.
-                    <br><br>
-                    One of the symbols I reference is the Venus of Willendorf, a European fertility statue from
-                    Neolithic times. The Willendorf has been popularly theorized to be made in the image of a fertility
-                    goddess as an aphrodisiac for men and used to encourage women toward sex and continual reproduction.
-                    These figurines are overly bulbous with exaggerated proportions and often are headless or faceless
-                    to further objectify the female image. The Venus figurine sets a standard, within its religion, of
-                    gender division: women coerced into becoming mere instruments of reproduction, and men, the
-                    coercers, who have created this standard for their own benefit and desire. The Venus falls in line
-                    with a slew of religious symbols that have been created or manipulated into pushing a motive of
-                    personal interest such as the Nazi corruption of the swastika, the Western commercialization of
-                    Hinduism through the Om, as well as the utilization of Jesus as a tool to endorse fallacious claims.
-                    In the end, through the depiction of these corroded symbols, I hope to demonstrate the danger of
-                    blind faith and how religious symbols can be used as a means to manipulate.
-                    <br><br>
-                    In my works, I combine acrylic painting with printmaking, carving the Venus figurine onto rubber
-                    plates to create a printing matrix that I can print multiple times onto the canvas. Using the plates
-                    as stamps allows me to create subsequent imagery, continuous through separate pieces. I roll the
-                    plates with white acrylic paint to get an idea of the form that I'll paint over. After the form is
-                    fleshed out in color, I use black printing ink to stamp the final outline, again, onto the painted
-                    canvas which creates a more graphic representation of the symbol. This way, the bold, striking
-                    quality of the printline draws more attention to the figure and demonstrates the weight of the
-                    symbol’s impact through its literal, visual weight on the canvas.
 
                 </div>
                 <div class="chonk">
@@ -145,13 +123,12 @@
                         followers.
                         <br><br>
                         One of the symbols I reference is the Venus of Willendorf, a European fertility statue from
-                        Neolithic times. The Willendorf has been popularly theorized to be made in the image of a
-                        fertility goddess as an aphrodisiac for men and used to encourage women toward sex and continual
-                        reproduction. These figurines are overly bulbous with exaggerated proportions and often are
-                        headless or faceless to further objectify the female image. The Venus figurine sets a standard,
-                        within its religion, of gender division: women coerced into becoming mere instruments of
-                        reproduction, and men, the coercers, who have created this standard for their own benefit and
-                        desire. [cont]
+                        Neolithic times. In my works, I combine acrylic painting with printmaking to create a printing
+                        matrix that I can print multiple times onto the canvas. Using the plates as stamps allows me to
+                        create subsequent imagery, continuous through separate pieces. The bold, striking quality of the
+                        printline draws more attention to the figure and demonstrates the weight of the symbol’s impact
+                        through its literal, visual weight on the canvas.
+
 
                     </div>
 
@@ -161,38 +138,6 @@
                         </div>
                         <div class="label-desc">
                             Jackie Hu
-                        </div>
-                    </div>
-                </div>
-
-                <div class="vert-align">
-
-                    <div class="portfolio-artist-statement-text fade-in">
-                        
-                        [cont] The Venus falls in line with a slew of religious symbols that have been created or
-                        manipulated into pushing a motive of personal interest such as the Nazi corruption of the
-                        swastika, the Western commercialization of Hinduism through the Om, as well as the utilization
-                        of Jesus as a tool to endorse fallacious claims. In the end, through the depiction of these
-                        corroded symbols, I hope to demonstrate the danger of blind faith and how religious symbols can
-                        be used as a means to manipulate.
-                        <br><br>
-                        In my works, I combine acrylic painting with printmaking, carving the Venus figurine onto rubber
-                        plates to create a printing matrix that I can print multiple times onto the canvas. Using the
-                        plates as stamps allows me to create subsequent imagery, continuous through separate pieces. I
-                        roll the plates with white acrylic paint to get an idea of the form that I'll paint over. After
-                        the form is fleshed out in color, I use black printing ink to stamp the final outline, again,
-                        onto the painted canvas which creates a more graphic representation of the symbol. This way, the
-                        bold, striking quality of the printline draws more attention to the figure and demonstrates the
-                        weight of the symbol’s impact through its literal, visual weight on the canvas.
-
-                    </div>
-
-                    <div class="label">
-                        <div class="label-title">
-                            -
-                        </div>
-                        <div class="label-desc">
-                            -
                         </div>
                     </div>
                 </div>
