--- a/APExhibition/index.html
+++ b/APExhibition/index.html
@@ -124,7 +124,7 @@
                         <img class="thumbnail" src="media/AinsleyMillard_2D/thumbnail.jpg">
                         <div class="caption-container">
                             <div class="caption-1">Corruption of Beauty</div>
-                            <div class="caption-2">Ainsely Millard</div>
+                            <div class="caption-2">Ainsley Millard</div>
                         </div>
                     </a>
                 </div>
@@ -184,7 +184,7 @@
                         <img class="thumbnail" src="media/BrooklynCicero_D/thumbnail.jpg">
                         <div class="caption-container">
                             <div class="caption-1">the female subconscious</div>
-                            <div class="caption-2">BrooklynCicero</div>
+                            <div class="caption-2">Brooklyn Cicero</div>
                         </div>
                     </a>
                 </div>
